<resources>
    <string name="app_name">NoteApp</string>
    <string name="add_note_title">Title</string>
    <string name="add_note_description">Description</string>
    <string name="text_add">Add Note</string>
    <string name="text_edit">Edit Note</string>
    <string name="text_delete">Delete Note</string>
    <string name="update">Update</string>
    <string name="text_edited">Edited</string>
</resources>